--- a/css/_typography.styl
+++ b/css/_typography.styl
@@ -7,18 +7,16 @@ body
   -moz-osx-font-smoothing grayscale
   font-family 'Open Sans', sans-serif
   font-size 2rem
-  
+
 h1
-  font-family 'blanchcaps_inline', sans-serif;
+  font-family 'Roboto', sans-serif;
   text-align center
-  font-weight normal
-  margin 0
-
-
+  font-weight 300
+  font-size 3rem
 
 h2,h3,h4,h5,h6
   font-weight normal
-  font-family 'haymakerregular', sans-serif
+  font-family 'Roboto', sans-serif
 
 h2
   text-align center
@@ -26,4 +24,4 @@ h2
   margin-bottom 2rem
 
 h3
-  font-size 3rem
+  font-size 2rem
