Very simple add dataset form

--- a/css/style.styl
+++ b/css/style.styl
@@ -62,7 +62,7 @@ ul.order
 .order-title
   text-align center
 
-.fish-edit
+.dataset-edit
   margin-bottom 20px
   border 2px solid black
   overflow hidden
