Remove unused styles

--- a/css/_typography.styl
+++ b/css/_typography.styl
@@ -2,15 +2,13 @@ html
   font-size 62.5%
 
 body
-  background #D4D4D4
   -webkit-font-smoothing antialiased
   -moz-osx-font-smoothing grayscale
-  font-family 'Open Sans', sans-serif
-  font-size 2rem
+  font-family 'Roboto', sans-serif
+  font-size 1.4rem
 
 h1
   font-family 'Roboto', sans-serif;
-  text-align center
   font-weight 300
   font-size 3rem
 
