More style cleanup

--- a/css/style.styl
+++ b/css/style.styl
@@ -7,32 +7,9 @@ ul
   padding 0
 
 .dataset-edit
-  margin-bottom 20px
-  border 2px solid black
-  overflow hidden
-  display flex
-  flex-wrap wrap
-  input, textarea, select
-    width 33.33%
-    padding 10px
-    line-height 1
-    font-size 1.2rem
-    border 0
-    border-bottom 1px solid black
-    border-right 1px solid black
-    appearance none
-    border-radius 0
-    background white
-    &:focus
-      outline 0
-      background lighten(orange, 85%)
-  textarea
-    width 100%
-  input:last-of-type
-    width 100%
-  button
-    width 100%
-    border 0
+  width 80%
+  max-width 800px
+  margin 0 auto
 
 button, input[type=submit]
   &.github, &.facebook, &.twitter
