update summary stats styles

--- a/client/css/style.styl
+++ b/client/css/style.styl
@@ -34,3 +34,10 @@ button, input[type=submit]
     background #5EA9DD
     &:after
       background darken(#5EA9DD, 20%)
+
+.summaryBox {
+    box-sizing: border-box;
+    margin: 0;
+    padding: '10px';
+    paddingLeft: '16px';
+}
