Fix styles on summaryBox

--- a/client/css/style.styl
+++ b/client/css/style.styl
@@ -35,9 +35,8 @@ button, input[type=submit]
     &:after
       background darken(#5EA9DD, 20%)
 
-.summaryBox {
-    box-sizing: border-box;
-    margin: 0;
-    padding: '10px';
-    paddingLeft: '16px';
-}
+.summaryBox
+  box-sizing border-box
+  margin 0
+  padding 10px
+  paddingLeft 16px
