--- a/client/css/styles.css
+++ b/client/css/styles.css
@@ -438,6 +438,22 @@ button.github:after, input[type=submit].github:after {
 
 /* General layout */
 
+.singleSheet {
+  width: 1024px;
+  margin: 15px auto;
+  padding: 30px;
+}
+
+/* Add Dataset layout */
+
+.submitButton {
+  margin-top:32px;
+}
+
+.blockField {
+  display:block;
+}
+
 .summaryBox {
   box-sizing: border-box;
   margin: 0;
