--- a/client/css/styles.css
+++ b/client/css/styles.css
@@ -586,6 +586,17 @@ button.github:after, input[type=submit].github:after {
   padding-top: 15px;
 }
 
+.welcome-announce {
+  font-size: 2.6em;
+  margin-top: 50px;
+  font-weight:500;
+}
+
+.welcome-enter {
+  font-size: 1.1em;
+  text-align: center;
+}
+
 .welcome-cta {
   width: 150px;
   height: 60px;
@@ -598,4 +609,24 @@ button.github:after, input[type=submit].github:after {
   margin: 12px auto 25px;
   width: 400px;
   padding: 5px;
+}
+
+.welcome-email-field {
+  display: block;
+  margin: 0 auto;
+}
+.explore-preview-sheet {
+  padding: 15px;
+  height:400px;
+}
+.explore-preview-sheet-left {
+  float:left;
+  width:500px;
+  margin-left:20px;
+  margin-top:40px;
+}
+.explore-preview-sheet-right {
+  float:right;
+  width:420px;
+  margin-right:15px;
 }
