--- a/client/css/styles.css
+++ b/client/css/styles.css
@@ -655,7 +655,7 @@ button.github:after, input[type=submit].github:after {
 .rc-slider-rail {
   position: absolute;
   width: 100%;
-  background-color: #e9e9e9;
+  background-color: #6369E0;
   height: 4px;
   border-radius: 6px;
 }
@@ -664,7 +664,7 @@ button.github:after, input[type=submit].github:after {
   left: 0;
   height: 4px;
   border-radius: 6px;
-  background-color: #abe2fb;
+  background-color: #6369E0;
 }
 .rc-slider-handle {
   position: absolute;
@@ -676,17 +676,17 @@ button.github:after, input[type=submit].github:after {
   cursor: -webkit-grab;
   cursor: grab;
   border-radius: 50%;
-  border: solid 2px #96dbfa;
+  border: solid 2px #6369E0;
   background-color: #fff;
   -ms-touch-action: pan-x;
       touch-action: pan-x;
 }
 .rc-slider-handle:hover {
-  border-color: #57c5f7;
+  border-color: #B1B2F6;
 }
 .rc-slider-handle:active {
-  border-color: #57c5f7;
-  box-shadow: 0 0 5px #57c5f7;
+  border-color: #B1B2F6;
+  box-shadow: 0 0 5px #B1B2F6;
   cursor: -webkit-grabbing;
   cursor: grabbing;
 }
@@ -733,7 +733,7 @@ button.github:after, input[type=submit].github:after {
   margin-left: -4px;
 }
 .rc-slider-dot-active {
-  border-color: #96dbfa;
+  border-color: #B1B2F6;
 }
 .rc-slider-disabled {
   background-color: #e9e9e9;
@@ -921,9 +921,9 @@ button.github:after, input[type=submit].github:after {
   color: #fff;
   text-align: center;
   text-decoration: none;
-  background-color: #6c6c6c;
+  background-color: #D0D0D7;
   border-radius: 6px;
-  box-shadow: 0 0 4px #d9d9d9;
+  box-shadow: 0 0 4px #9A99A6;
 }
 .rc-slider-tooltip-arrow {
   position: absolute;
