--- a/client/css/styles.css
+++ b/client/css/styles.css
@@ -82,7 +82,7 @@ img {
 }
 
 svg:not(:root) {
-  overflow: hidden;
+  overflow: visible;
 }
 
 fieldset {
@@ -571,10 +571,24 @@ button.github:after, input[type=submit].github:after {
 .explore-right-histogram {
   float: right;
   width: 788px;
-  height: 320px;
+  height: 600px;
   margin-top: 24px;
   margin-bottom: 24px;
   padding: 24px;
+}
+
+.explore-victory-histogram {
+  float: left;
+  width: 400px;
+  height: 390px;
+  margin-top: 12px;
+  margin-bottom: 12px;
+  margin-left: 24px;
+
+}
+
+.explore-select {
+  margin-left: 80px;
 }
 
 .explore-table {
