--- a/client/css/styles.css
+++ b/client/css/styles.css
@@ -587,6 +587,16 @@ button.github:after, input[type=submit].github:after {
 
 }
 
+.explore-victory-areachart {
+  float: right;
+  width: 400px;
+  height: 390px;
+  margin-top: 12px;
+  margin-bottom: 12px;
+  margin-left: 24px;
+
+}
+
 .explore-select {
   margin-left: 80px;
 }
