--- a/client/css/styles.css
+++ b/client/css/styles.css
@@ -605,6 +605,15 @@ button.github:after, input[type=submit].github:after {
   margin-left: 24px;
 }
 
+.explore-victory-radarchart {
+  float: right;
+  width: 400px;
+  height: 390px;
+  margin-top: 12px;
+  margin-bottom: 12px;
+  margin-left: 24px;
+}
+
 .explore-select {
   margin-left: 80px;
 }
