--- a/client/css/styles.css
+++ b/client/css/styles.css
@@ -456,6 +456,45 @@ ul {
 .callout {
   color: #6369E0;
   font-weight: 700;
+  margin-left: 290px;
+  font-size: 30px;
+}
+
+.callout-details {
+  font-weight: 700;
+  margin-left: 10px;
+  margin-bottom: 24px;
+  font-size: 24px;
+}
+
+.callout-bottom {
+  color: #6369E0;
+  font-weight: 700;
+  font-size: 24px;
+  text-align: right;
+  margin-left: 470px;
+}
+
+.callout-details-bottom {
+  font-weight: 700;
+  margin-left: 10px;
+  margin-bottom: 24px;
+  font-size: 18px;
+}
+
+.download-button {
+  font-weight: 700;
+  font-size: 24px;
+  float:right;
+  margin-left: 490px;
+  margin-bottom: 18px;
+}
+
+.save-discovery-button {
+  font-weight: 700;
+  font-size: 30px;
+  margin-left: 288px;
+  margin-bottom: 18px;
 }
 
 .button-link {
@@ -511,12 +550,13 @@ button.github:after, input[type=submit].github:after {
 }
 
 .explore-filter-card {
-  height: 888px;
+  height: 900px;
   overflow-y: scroll;
   width: 380px;
   float: left;
   margin: 0 0 0 0;
   padding: 24px;
+  margin-top:105px;
 }
 
 .profile-container {
@@ -543,11 +583,13 @@ button.github:after, input[type=submit].github:after {
 }
 
 .explore-right-map {
-  float: right;
+  float: left;
   width: 788px;
   height: 408px;
   margin: 0;
   padding: 24px;
+  margin-left: 18px;
+  margin-top: 18px;
 }
 
 .explore-map-container {
@@ -565,53 +607,53 @@ button.github:after, input[type=submit].github:after {
 .explore-right-summary {
   float: right;
   width: 788px;
-  margin-top: 24px;
+  margin-top: 18px;
+  margin-left: 18px;
+  margin-bottom: 18px
 }
 
 .explore-right-histogram {
   float: right;
   width: 788px;
   height: 600px;
-  margin-top: 24px;
   margin-bottom: 24px;
   padding: 24px;
 }
 
+.explore-dashboard {
+  float: left;
+  width: 788px;
+  height: 390px;
+  margin-top: 18px;
+  margin-left: 18px;
+}
+
 .explore-victory-histogram {
   float: left;
-  width: 400px;
+  width: 385px;
   height: 390px;
-  margin-top: 12px;
-  margin-bottom: 12px;
-  margin-left: 24px;
-
+  margin-bottom: 18px;
 }
 
 .explore-victory-areachart {
   float: right;
-  width: 400px;
+  width: 385px;
   height: 390px;
-  margin-top: 12px;
-  margin-bottom: 12px;
-  margin-left: 24px;
+  margin-bottom: 18px;
 }
 
 .explore-wordcloud {
   float: left;
-  width: 400px;
+  width: 385px;
   height: 390px;
-  margin-top: 12px;
-  margin-bottom: 12px;
-  margin-left: 24px;
+  margin-bottom: 18px;
 }
 
 .explore-victory-radarchart {
   float: right;
-  width: 400px;
+  width: 385px;
   height: 390px;
-  margin-top: 12px;
-  margin-bottom: 12px;
-  margin-left: 24px;
+  margin-bottom: 18px;
 }
 
 .explore-select {
