--- a/client/css/styles.css
+++ b/client/css/styles.css
@@ -646,17 +646,22 @@ button.github:after, input[type=submit].github:after {
   float: left;
   width: 385px;
   height: 390px;
-  margin-bottom: 18px;
+  padding-left:3px;
+  padding-right:3px;
   overflow-y:scroll;
 }
 
-.word-cloud-tag {
+.word-cloud-tag-wrapper {
   border: 2px solid rgba(177,178,246,.5);
   border-radius: 2px;
   background-color: rgba(233,234,253,.2);
   display: inline-block;
-  padding: 3px;
+  padding: 6px;
   margin: 3px;
+}
+
+.word-cloud-tag {
+  display:block;
 }
 
 .explore-victory-radarchart {
