--- a/client/css/styles.css
+++ b/client/css/styles.css
@@ -1597,5 +1597,60 @@ button.github:after, input[type=submit].github:after {
 }
 
 .CustomTriggerCSS--open {
-  background-color: darkslateblue;
+  background-color: #B3B4EF;
+}
+
+.chips {
+  min-height: 36px;
+  border-bottom: 1px solid rgb(224, 224, 224);
+  line-height: 1;
+  font-size: 1em;
+}
+
+.chips-input {
+  display: inline-block;
+  width: 33% !important;
+  min-height: 36px;
+  margin: 0 0 5px 10px !important;
+  border: 0;
+  outline: none;
+  font-size: 0.9rem;
+  border-bottom: none !important;
+  box-shadow: none !important;
+}
+
+.chip {
+  display: inline-block;
+  margin-top: 5px;
+  margin-bottom: 5px;
+  margin-left: 5px;
+  margin-right: 25px;
+  position: relative;
+  padding: 0;
+  height: 32px;
+}
+
+.chip .chip-value {
+  display: inline-block;
+  padding-left: 15px;
+  padding-right: 7.5px;
+  background: #555;
+  color: #fff;
+  font-weight: bold;
+  border-radius: 15px 0 0 15px;
+}
+
+.chip .chip-delete-button {
+  background: #555;
+  color: #fff;
+  border: 0;
+  border-radius: 0 15px 15px 0;
+  padding: 5px 10px;
+  cursor: pointer;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  right: -25px;
+  line-height: 0.5;
+  font-weight: bold;
 }
