Don't need the whole filter always showing, but it shrinking beneath 1000px causes layout problems

--- a/client/css/styles.css
+++ b/client/css/styles.css
@@ -575,7 +575,7 @@ button.github:after, input[type=submit].github:after {
 }
 
 .explore-filters {
-  height:1485px;
+  min-height:1000px;
   margin: 0 0 18px 0;
 }
 
