add more glossary tooltips
-also change to new ec2 instance

--- a/client/css/styles.css
+++ b/client/css/styles.css
@@ -573,6 +573,10 @@ button.github:after, input[type=submit].github:after {
   margin: 0 0 18px 0;
 }
 
+.filter-field-with-help {
+  float: left;
+}
+
 .explore-headline {
   margin: 0 0 18px 18px;
   position: relative;
