parse submitter sample attributes in dataset details

--- a/client/css/styles.css
+++ b/client/css/styles.css
@@ -624,6 +624,12 @@ button.github:after, input[type=submit].github:after {
   margin: 36px 0 36px 18px;
 }
 
+/* Dataset Detail Layout */
+.dataset-sheet {
+  margin: 36px 18px 36px 18px;
+  padding: 18px 5%;
+}
+
 
 /* Add Dataset layout */
 
