--- a/client/css/styles.css
+++ b/client/css/styles.css
@@ -917,10 +917,11 @@ button.github:after, input[type=submit].github:after {
 }
 
 .discovery-header-summary-right {
-  margin: 0 0 0 150px;
+  margin: 0 0 0 18px;
   padding-top: 36px;
   display: inline-block;
   vertical-align: top;
+  width: 550px;
 }
 
 .discovery-header-first {
@@ -953,11 +954,14 @@ button.github:after, input[type=submit].github:after {
 
 .discovery-header-user {
   color: rgb(150,150,150);
-  font-size: 18px;
+  font-size: 16px;
   font-weight: 500;
   font-family: 'Roboto', sans-serif;
   margin: 0 0 18px 0;
   text-align: right;
+  white-space: normal;
+  display: table;
+
   position: relative;
   display: block;
   top: 28%;
