--- a/client/css/styles.css
+++ b/client/css/styles.css
@@ -641,6 +641,11 @@ button.github:after, input[type=submit].github:after {
   display: block;
 }
 
+/* Header Layout */
+.header-image-beta {
+  width: 50px;
+  height: 50px;
+}
 
 /* Explore layout */
 
@@ -655,13 +660,18 @@ button.github:after, input[type=submit].github:after {
 }
 
 .explore-container {
-  width: 1100px;
-  margin: 10px auto;
+  width: 1212px;
+  margin: 10px 7.5%;
 }
 
 .explore-container-filteropen {
   width: 1100px;
   margin: 10px 10% 0 23%;
+}
+
+.explore-container-filterclosed {
+  width: 1100px;
+  margin: 10px 11% 0 11%;
 }
 
 .right {
@@ -1097,6 +1107,11 @@ button.github:after, input[type=submit].github:after {
 .welcome-email-field {
   display: block;
   margin: 0 auto;
+}
+
+.welcome-text {
+  margin: 36px 0 36px 18px;
+  padding: 36px;
 }
 
 .explore-preview-sheet {
