--- a/client/css/styles.scss
+++ b/client/css/styles.scss
@@ -1,7 +1,13 @@
+/* Sass variables */
+
+$font-stack: Helvetica, sans-serif;
+$primary-color: #333;
+
+
 /* Reset styles */
 
 html {
-  font-family: sans-serif;
+  font-family: $font-stack;
   -webkit-text-size-adjust: 100%;
   -ms-text-size-adjust: 100%;
 }
